# Ash

./: .gitignore  FUNDING.json  LICENSE  README.md  biome.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: anyhow_tauri.rs  config.rs  lib.rs  main.rs
src-tauri/src/commands/: map.rs  mod.rs  tor.rs
src-tauri/src/models/: app.rs  http.rs  map.rs  mod.rs  tor.rs
src/components/: GroupChatComponent.tsx  GroupInviteDialog.tsx  GroupJoinDialog.tsx  MapComponent.tsx  MarkerComponent.tsx  MarkerNameDialog.tsx  NewGroupDialog.tsx
src/components/network/: NetworkStatusDialog.tsx
src/components/tor/: TorStatusDialog.tsx
src/components/welcome-steps/: LocalitySelectionStep.tsx  MapDownloadStep.tsx  NetworkSetupStep.tsx  WelcomeIntroStep.tsx  WelcomeStepper.tsx
src/hooks/: useLocalities.ts  useSetupStatus.ts
src/interfaces/: country.ts  download.ts  group.ts  locality.ts  localitysrv.ts  networkStatus.ts  pmtiles.ts  tor.ts
src/service/: chatService.ts  searchService.ts
src/stores/: jsonStore.ts  mainViewStore.ts  mapStore.ts  torStore.ts  wakuStore.ts
src/utils/: mapUtils.ts  pmtiles-protocol.ts
src/views/: MainView.tsx  WakuView.tsx  WelcomeView.tsx
