[package]
name = "ash"
version = "0.1.0"
description = "Peer-to-peer field coordination for activists and protest movements"
authors = ["Xavier Saliniere <bonjour@xaviers.sh>"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
show_errs_in_release = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
pmtiles = { version = "0.17.0", default-features = false, features = ["write", "tilejson", "mmap-async-tokio"] }
# Arti dependencies for Tor functionality
arti-client = { version = "0.18", features = ["tokio", "onion-service-client"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
anyhow = "1.0"
once_cell = "1.19"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tor-rtcompat = "0.18"
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
futures = "0.3"
openssl = { version = "*", features = ["vendored"] }
